Fix table overflow when too long word is present in Trait/Method/Unit fields on the Variable detail view

--- a/web/css/site.css
+++ b/web/css/site.css
@@ -300,3 +300,7 @@ table.properties-widget > tbody > tr > th:first-letter {
 .multi-line {
     white-space: pre-wrap;
 }
+
+.variable-view td {
+    word-break: break-all;
+}
